--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -96,6 +96,8 @@ Na téma 3D modelování existuje mnoho zahraničních knih. Převážně se~vš
 
 Na téma modelování terénu v prostředí ArcGIS vypracovala diplomovou práci Adina Slívová \cite{adina}. Ta v rámci své práce \textit{3D model historického údolí Vltavy v oblasti přehradní nádrže Slapy} vizualizovala přehradní nádrž Slapy formou 3D modelu. Tato práce byla součástí projektu \textit{Vltava – proměny historické krajiny v důsledku povodní, stavby přehrad a změn ve využití území s~vazbami na kulturní a společenské aktivity v okolí řeky}. Mezi studenty je~téma spojené s historií velmi oblíbené. Adéla Dykastová se ve své práci \textit{Analýza a~vizualizace vývoje zástavby města Kadaně} \cite{dykastova} věnuje zhodnocení a~vhodné vizualizaci vývoje zástavby Kadaně od roku 1842 až do současnosti. 
 
+Součástí příloh jsou i vytvořené mapy měst, kterými řeka protéká. Podobnému tématu se věnuje Tereza Plavcová ve své diplomové práci \textit{Soubor tématických map města Benešova a jeho okolí} \cite{plavcova}. Ta ve své práci popisuje nejen metody tématické kartografie, ale také kartografická pravidla a jednotlivé kompoziční prvky.
+
 Neopomenutelnou součástí práce je i střední Pootaví. Na toto téma vznikla řada publikací. O Otavě byla nejvíce nápomocna kniha \textit{Po vlnách řeky Otavy} \cite{SMOOS} od Eduarda Oberfalcera, který spolupracuje se Svazkem měst a obcí okresu Strakonic a kromě této publikace vydal například i knihu \textit{Encyklopedie měst a obcí okresu Strakonice} \cite{obce}. Z knih týkajících se historie a pověstí jižních Čech je jedním z nejznámějších autorů Ondřej Fibich, který ač vyrostl a vystudoval Praze, tak má velmi blízko k Šumavě a jeho díla jsou úzce spjata s Prácheňskem, Píseckem a Šumavou.
 
 
@@ -374,12 +376,17 @@ Ortofoto je v dnešní době jeden z nejznámějších a nejpoužívanějších 
 Tvorba státního Ortofota ČR je zajištěna od roku 2003 Zeměměřickým úřadem ve spolupráci s Vojenským geografickým a hydrometeorologickým úřadem na základě dohody ČÚZK s Ministerstvem obrany ČR. Ortofota jsou v~dnešní době hojně vyhledávaná i ze stran laické veřejnosti. Jejich obliba je zapříčiněna zejména přehledností a zobrazením skutečných barev, díky čemuž jsou mapy pro mnoho uživatelů i lépe čitelné. \cite{cuzk} \cite{ortofoto}
 
 
+\subsection{Digitální model reliéfu 5. generace}
+Digitální model reliéfu České republiky 5. generace digitálně znázorňuje zemský povrch Česka body o třech souřadnicích (X, Y, H), kde H představuje výšku v systému Bpv. Tento model vznikl metodou leteckého laserového skenování v letech 2009 – 2013. V zalesněném území dosahuje přesnosti 0.3 m, v odkrytém území je přesnost kolem 0.18 m. Model neobsahuje budovy a je určen především k analýzám terénních poměrů. \cite{cuzk}
+
+
+
 \section{Fotodokumentace}
 Součástí této práce je také vyhledání historických fotografií a jejich případné porovnání se současným stavem. Z historických fotografií byly použity fotografie ze sbírky Ladislava Hölla a z webových stránek Fotohistorie \cite{fotohistorie} a Šumava \cite{sumava}. Dále byly prozkoumány archivní publikace, ze kterých byly použité fotografie vyfotografovány pro následné použití v této práci.
 
 Kromě fotografií bylo využito i historických pohlednic zachycujících Otavu nebo Strakonický hrad. Zároveň byly použity i rytiny a kresby.
 
-\section{Data pro tvorbu dílčích tematických map}
+
 
 
 \chapter{Rovinné transformace}
@@ -768,11 +775,11 @@ Fotografování v tomto poměrně velkém časovém rozmezí bylo zapřičiněno
 
 Velká výhoda softwaru SketchUp je ta, že lze projekt geolokalizovat. Geolokalizace vzniká jednoduchou volbou \textit{File $\rightarrow$ Geo-location $\rightarrow$ Add \mbox{location ... }}. Model byl publikován na webovou stránku 3D Warehouse pomocí volby funkce \textit{File $\rightarrow$ 3D Warehouse $\rightarrow$ Share Model ... }. Zároveň byla vytvořena krátka animace, ve~které byla snaha zachytit model z několika různých pohledů. Tato animace je součástí příloh a byla publikována na server YouTube, který v současné době spadá také pod společnost Google a prezentuje se jako dceřiná společnost této firmy. 
 
-Při zpracování byla nejprve v modelu vytvořena gotická věž Rumpál (obr. č. \ref{obrazek:sk1}), která je nejspíš nejvýraznější ikona hradu. Následně bylo vymodelováno II. hlavní nádvoří (obr. č. \ref{obrazek:sk2}). Poté byl vytvořen kostel sv. Prokopa s ním související I. hlavní nádvoří (obr. č. \ref{obrazek:sk3}). Na obrázku č. \ref{obrazek:sk4} lze vidět výsledný model, na obrázku č. \ref{obrazek:sk5} je zobrazen tento model včetně textur. Na obrázku č. XX je již finální podoba hradu se všemi detaily.
+Při zpracování byla nejprve v modelu vytvořena gotická věž Rumpál (obr. č.~\ref{obrazek:sk1}), která je nejspíš nejvýraznější ikona hradu. Následně bylo vymodelováno II. hlavní nádvoří (obr. č. \ref{obrazek:sk2}). Poté byl vytvořen kostel sv. Prokopa s ním související I. hlavní nádvoří (obr. č. \ref{obrazek:sk3}). Na obrázku č. \ref{obrazek:sk4} lze vidět výsledný model, na obrázku č. \ref{obrazek:sk5} je zobrazen tento model včetně textur. Na obrázku č. \ref{obrazek:sk6} je již finální podoba hradu se všemi detaily.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=8cm]{pics/sketchup1.png}
+	\includegraphics[width=5cm]{pics/sketchup1.png}
 	\caption{Gotická věž Rumpál}
 	\label{obrazek:sk1}
 \end{figure}
@@ -805,25 +812,34 @@ Při zpracování byla nejprve v modelu vytvořena gotická věž Rumpál (obr. 
 	\label{obrazek:sk5}
 \end{figure}
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=13cm]{pics/final_model.jpg}
+	\caption{Výsledný 3D model Strakonického hradu}
+	\label{obrazek:sk6}
+\end{figure}
+
 \clearpage
 
 \subsection{Prezentace výsledků z programu SketchUp}
-Animace - youtube, celý model - 3D warehouse, nějaké porovnání fotografií a modelu
+Výsledný model byl publikován na stránku 3D Warehouse, která slouží jako úložiště modelů vytvořených v programu SketchUp a jejich sdílení se všemi uživateli internetu. V rámci stránky lze vyhledat a následně stáhnout do svého projektu již vytvořený libovolný objekt. 3D Warehouse v současné době nabízí možnost volby z několika různorodých kategorií, kromě stavebních objektů je možné stáhnout model zvířat, lidí, nábytku či jídla. 
+
+SketchUp nabízí i možnost tvorby animace modelu, kdy jsou postupně voleny jednotlivé scény a program z nich vytvoří krátké video. Model je rozsáhlý a při nasnímání hradu ze všech významných pohledů vzniklo video o 40~scénách. Takto obsáhlé video nešlo publikovat ve formátu \textit{avi}, bylo tedy vytvořeno ve formátu \textit{mp4}. Zároveň byla vytvořena i kratší animace, která byla exportována ve formátu \textit{avi}. Vzniklá videa byla nahrána na server YouTube, kde jsou volně ke zhlédnutí. 
 
 
 \section{Zpracování kartografických podkladů}
-Zpracování kartografických podkladů probíhalo v softwaru ArcGIS od společnosti ESRI, která se zabývá vývojem softwaru pro práci s geografickými informačními systémy. Zakladatelem společnosti byl Jack Dangermond. ArcGIS je primárně určen pro práci s prostorovými daty, jejich tvorbu, správu či analýzu.
+Zpracování kartografických podkladů probíhalo v softwaru ArcGIS od společnosti ESRI, která se zabývá vývojem softwaru pro práci s geografickými informačními systémy. Zakladatelem společnosti byl Jack Dangermond. ArcGIS je primárně určen pro práci s prostorovými daty, jejich tvorbu, správu či~analýzu.
 
-Před samotným zpracováním byla zapotřebí příprava prostředí a mapového okna v programu ArcMap. Nejprve byla vytvořena geodatabáze \textit{Otava.gdb}. Geodatabáze je interní formát společnosti ESRI, který slouží k ukládání a manipulaci s prostorovými daty. Velkou výhodou je to, že všechny soubory jsou uloženy v jednom adresáři. Pro geodatabázi lze nastavit i defaultní souřadnicový systém, pro databázi \textit{Otava.gdb} byl zvolen S-JTSK Krovak East North (EPSG: 5514).
+Před samotným zpracováním byla zapotřebí příprava prostředí a mapového okna v programu ArcMap. Nejprve byla vytvořena geodatabáze \textit{Otava.gdb}. Geodatabáze je interní formát společnosti ESRI, který slouží k ukládání a~manipulaci s prostorovými daty. Velkou výhodou je to, že všechny soubory jsou uloženy v jednom adresáři. Pro geodatabázi lze nastavit i defaultní souřadnicový systém, pro databázi \textit{Otava.gdb} byl zvolen S-JTSK Krovak East North (EPSG: 5514).
 
-Pro mapový dokument byla zvolena možnost ukládání relativní cesty ve zdrojích dat. Relativní cesta byla nastavena z toho důvodu, že zpracování probíhalo na více počítačích. 
+Pro mapový dokument byla zvolena možnost ukládání relativní cesty zdrojových dat. Relativní cesta byla nastavena z toho důvodu, že zpracování probíhalo na více počítačích. 
 
 
 \subsection{Georeferencování}
 
 Císařské povinné otisky stabilního katastru a Státní mapa odvozená byly zapůjčeny od Českého úřadu zeměměřického a katastrálního ve formátu JPG ve formě rastrových dat. Tato data bylo nutné zgeoreferencovat \footnote{Proces umístění rastru do známého souřadnicového systému} za využití znalosti transformace. 
 
-Pro georeferencování posloužila jako podkladová data katastrální mapy, jež jsou k dispozici online prostřednictvím WMS služby poskytnuté ze serveru ČÚZK.  Jako vlícovací body byly u prvního rastru voleny přednostně takové body, u kterých se předpokládá již zmíněná stabilita a neměnnost. U dalších rastrů byly vlícovací body voleny s ohledem na klad mapových listů a plynulou návaznost se sousedními rastry. Vzhledem k měřítku mapových podkladů byl požadavek na maximální hodnotu směrodatné odchylky 2,5 m. Pro kvalitněji zgeoreferencovaná data byly vlícovací body voleny rovnoměrně rozmístěné po celém rastru a byla snaha o dosažení nadbytečného množství, aby při transformaci docházelo k vyrovnání MNČ. 
+Pro georeferencování posloužila jako podkladová data katastrální mapy, jež jsou k dispozici online prostřednictvím WMS služby poskytnuté ze serveru ČÚZK.  Jako vlícovací body byly u prvního rastru voleny přednostně takové body, u kterých se předpokládá již zmíněná stabilita a neměnnost. U dalších rastrů byly vlícovací body voleny s ohledem na klad mapových listů a plynulou návaznost se sousedními rastry. Vzhledem k měřítku mapových podkladů byl požadavek na maximální hodnotu směrodatné odchylky 2,5 m. Pro kvalitněji zgeoreferencovaná data byly vlícovací body voleny rovnoměrně rozmístěné po~celém rastru a byla snaha o dosažení nadbytečného množství, aby při transformaci docházelo k vyrovnání MNČ. 
 
 
 \subsection{Tvorba mozaiky}
@@ -842,20 +858,20 @@ Pro přiřazení ořezového polygonu k danému rastru byla v rámci mozaiky pou
 \end{figure}
 
 \subsection{Vektorizace}
-Pro následné zpracování byly vybrané objekty z map CPO zvektorizovány, což znamená že byly převedeny z rastru na vektor. Vektorizace byla prováděna ručně a byly vektorizovány budovy, které byly dále rozdělovány na spalné a nespalné, lesy a řeka. 
+Pro následné zpracování byly vybrané objekty z map CPO zvektorizovány, což znamená, že byly převedeny z rastru na vektor. Vektorizace byla prováděna ručně a byly vektorizovány budovy, které byly dále rozdělovány na spalné a~nespalné, lesy a řeka. 
 
-Pro vektorizaci byla vytvořena nová polygonová vrstva, do níž byly objekty ukládány. Tvorba objektů probíhala za pomoci funkce \textit{Create Features} v liště \textit{Editor}. 
+Pro vektorizaci byly vytvořeny nové polygonové vrstvy, do nichž byly objekty ukládány. Tvorba objektů probíhala za pomoci funkce \textit{Create Features} v~liště \textit{Editor}. 
 
 
 \section{Modelování krajiny}
-Základ pro modelování byl vytvořen v programu ArcMap, následné zpracování probíhalo v softwaru ArcPro. 
+Základ pro modelování byl vytvořen v programu ArcMap, následné zpracování probíhalo v softwaru ArcPro. Do funkce pro vymodelování krajiny byly na~vstupu výškové kóty, vrstevnice a břehovka.
 
 \subsection{Vektorizace vrstevnic}
 Vrstevnice pro tvorbu 3D modelu byly převzaty z SMO-5. Před samotnou tvorbou bylo nutné rastry samostatně zpracovat, neboť pro vektorizaci sloužila nadstavba ArcScan, která dokáže pracovat pouze s rastry, které jsou definovány právě dvěma barvami. 
 
-Pro zpracování rastrů posloužil program IrfanView, který slouží k prohlížení obrázků, zvuků či videa. Program je pro nekomerční účely ke stažení zdarma. Podporuje velké množství grafických formátů, není paměťově náročný, dokáže měnit počet barev a přebarvovat grafické vstupy a umožňuje konverzi rastrů. Program byl přeložen do několika jazyků, včetně češtiny. 
+Pro zpracování rastrů posloužil program IrfanView, který je nejčastěji využíván k prohlížení obrázků, zvuků či videa. Program je pro nekomerční účely ke~stažení zdarma. Podporuje velké množství grafických formátů, není paměťově náročný, dokáže měnit počet barev a přebarvovat grafické vstupy a~umožňuje konverzi rastrů. Program byl přeložen do několika jazyků, včetně češtiny. 
 
-Při přebarvení byla zkopírována složka se zgeoreferencovanými SMO-5 a ty byly poté upraveny pro vektorizaci. Nejprve byla snížena barevná hloubka na 16 bitů, aby při volbě barvy byl sejmut odstín vrstevnic. Funkcí \textit{Replace Color – Replace source color} byly ručně vybírány pixely znázorňující vrstevnice, které byly následně přebarveny na růžovou, aby byl výrazný kontrast se zbylými pixely rastru. Poté byla snížena barevná hloubka na 2 bity, čímž vznikl černobílý rastr. 
+Při přebarvení byla zkopírována složka se zgeoreferencovanými SMO-5 a~ty byly poté upraveny pro vektorizaci. Nejprve byla snížena barevná hloubka na~16 bitů, aby při volbě barvy byl sejmut odstín vrstevnic. Funkcí \textit{Replace Color – Replace source color} byly ručně vybírány pixely znázorňující vrstevnice, které byly následně přebarveny na růžovou, aby byl výrazný kontrast se zbylými pixely rastru. Poté byla snížena barevná hloubka na 2 bity, čímž vznikl černobílý rastr. 
 
 \begin{figure}[h]
 	\centering
@@ -874,15 +890,13 @@ Při přebarvení byla zkopírována složka se zgeoreferencovanými SMO-5 a ty 
 Tím, že byly používány soubory vzniklé při georeferencování, nebylo zapotřebí tyto rastry opětovně georeferencovat. Rastry načtené v ArcMapu byly reklasifikovány na 2 hodnoty – bílá a černá. Před zpracováním je nutné aktivovat nadstavbu ArcScan. Aktivace se nachází pod volbou \textit{Customize – Extenstions}. Zároveň byla vytvořena liniová vrstva se dvěma atributy, nadmořskou výškou a délkou. 
 
 
-\subsection{Tvorba vrstevnic}
-
 Při spuštění nadstavby ArcScan je možnost smazání nežádoucích objektů (tiráž, chybné přebarvení atd.). K tomu slouží funkce \textit{Raster Cleanup}. Funkce nabízí mnoho možností jak zpracovat rastr v prostředí ArcGIS. V této práci byla použita pouze možnost \textit{Guma}, při níž byly nežádoucí prvky vymazány. 
 
 ArcScan nabízí 3 možnosti vektorizace, a to ruční, automatickou a poloautomatickou. Nejprve byla vyzkoušena automatická vektorizace. Při automatické vektorizaci bylo nutné nastavit parametry vektorizace (maximální tloušťku linie, míru vyhlazení, metodu řešení průsečíků, atd.) a zvolit barvu vrstvy. Zároveň bylo možné nastavit i styl generování vrstevnic, ten byl zvolen \textit{Contour}. Pro vyhledání co nejoptimálnějšího výsledku byly parametry několikrát měněny. Přesto nebyl výsledek postačující, mezi vrstevnicemi byly často mezery a zvektorizovaly se i objekty, které bylo následně nutné vymazat. 
 
-Z důvodu nespokojenosti s automatickou tvorbou byla vyzkoušena poloautomatická tvorba vrstevnic. Pro poloautomatickou tvorbu byla použita funkce \textit{Vectorization Trace}, která dokáže rozpoznat buňky, které na sebe navazují a vytvoří z nich linii. Poloautomatická tvorba probíhala současně s ruční, neboť na některých místech docházelo k tomu, že nenavazovala žádná buňka a bylo zapotřebí ručně přichytit linii na buňky, v jejichž směru vrstevnice pokračovala.
+Z důvodu nespokojenosti s automatickou tvorbou byla vyzkoušena poloautomatická tvorba vrstevnic. Pro poloautomatickou tvorbu byla použita funkce \textit{Vectorization Trace}, která dokáže rozpoznat buňky, které na sebe navazují a~vytvoří z nich linii. Poloautomatická tvorba probíhala současně s ruční, neboť na některých místech docházelo k tomu, že nenavazovala žádná buňka a bylo zapotřebí ručně přichytit linii na buňky, v jejichž směru vrstevnice pokračovala.
 
-Po vektorizaci vrstevnic byla vytvořena bodová vrstva obsahující výškové kóty. Kóty byly přejímány z SMO-5 spolu s výškami. Zároveň byla vytvořena liniová vrstva \textit{břehovka}, do níž byl zvektorizován břeh řeky. 
+Po vektorizaci vrstevnic byla vytvořena bodová vrstva obsahující výškové kóty. Kóty byly přejímány z SMO-5 spolu s výškami. Zároveň byla vytvořena liniová vrstva \textit{brehovka}, do níž byl zvektorizován břeh řeky s odhadem nadmořské výšky.
 
 
 
@@ -890,34 +904,141 @@ Po vektorizaci vrstevnic byla vytvořena bodová vrstva obsahující výškové 
 Funkcí \textit{Topo to raster} byla vytvořena barevná hypsometrie zadaného území. Do funkce vstupovala vrstva s výškovými kóty (\textit{PointElevation}), vrstevnice (\textit{Contour}), ohraničující polygon pro modelování (\textit{Boundary}) a břehovka (\textit{Contour}). Funkce nabízí mnoho dalších vstupů, je zde možnost nahrání vodního toku, útesu či pobřeží. Při modelování bylo vyzkoušeno několik různorodých vstupních dat, přesto zmíněný způsob se jevil jako nejsprávnější a téměř bezchybný. 
 
 \subsection{3D model krajiny}
-V programu ArcMap lze pro přibližnou představu vygenerovat stínovaný povrch terénu pomocí funkce \textit{Hillshade}. Pro tvorbu 3D modelu posloužil program ArcGIS Pro. Jedná se o nově vytvořený software, jehož hlavním cílem je zjednodušení práce. Narozdíl od ArcMap umožňuje v rámci aplikace pracovat s několika mapovými okny současně. 
+V programu ArcMap lze pro přibližnou představu vygenerovat stínovaný povrch terénu pomocí funkce \textit{Hillshade}. Pro tvorbu 3D modelu posloužil program ArcGIS Pro. Jedná se o nově vytvořený software, jehož hlavním cílem je zjednodušení práce. Narozdíl od ArcMap umožňuje v rámci aplikace pracovat s~několika mapovými okny současně. 
 
+V softwaru ArcGIS Pro byla vytvořena lokální scéna, do níž byla nahrána vrstva vzniklá funkcí \textit{Topo to raster}. Tato vrstva nahradila defaultní vrstvu v záložce \textit{Elevation Surfaces}, díky čemuž bylo možné vizualizovat vytvořený model krajiny. Do programu byla nahrána i polygonová vrstva řeky a mozaika s georeferencovanými rastry SMO-5. Na obrázku č. \ref{obrazek:otava_knezihora} lze vidět ukázku vizualizace vytvořeného 3D modelu.
 
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=10cm]{pics/arcgispro.png}
+	\caption{Vizualizace krajiny v softwaru ArcGIS Pro}
+	\label{obrazek:otava_knezihora}
+\end{figure}
 
 \section{Procedurální modelování}
+Jedná se o automatický způsob vytváření 3D modelů. Jednotlivé objekty jsou generovány z jednoduchých komponent dle předepsaných pravidel. Například model stromu má komponenty listy a větve, pravidla definují geometrii rozvětvování a parametry obsahují informace o hustotě listů, maximální tloušťce větve apod. Tímto způsobem lze pro stromy definovat různá pravidla a předpisy, čímž lze docílit toho, že vzniknou různorodé druhy stromů a na vytvořeném polygonu bude vygenerován les. \cite{jaderka}
 
-\subsection{City Engine}
+\subsection{CityEngine}
+CityEngine vytvořil Pascal Mueller. V roce 2011 jej odkoupila společnost Esri, která program přejmenovala na Esri CityEngine. Jedná se o software, který umožňuje z 2D geografických dat vytvořit 3D simulaci. Program podporuje mnoho formátů, včetně geodatabáze ArcGIS. Vytvořený model je možné publikovat a sdílet prostřednictvím ArcGIS Online. \cite{arcdata}
+
+\subsection{Modelování}
+Pro modelování v programu CityEngine byl založen projekt. Tento projekt má defaultně nastavené složky (assets, data, maps, models, rules, scenes, scripts). Před samotnou tvorbou bylo nutné nahrát do složky \textit{rules} pravidla pro procedurální modelování, která sestavil Pavel Tobiáš. Do složky \textit{assets} byly nahrány textury, které taktéž vytvořil Pavel Tobiáš. Do složky \textit{maps} byl vložen rastr vytvořený v programu ArcMap funkcí \textit{Topo to raster}. Do složky \textit{data} byly importovány zvektorizované shapefily a do složky \textit{models} byl vložen vytvořený generalizovaný 3D model Strakonického hradu.
+
+Při importu modelu nabízí CityEngine několik různých formátů, ve kterých lze model nahrát. Vzhledem k tomu, že se jedná o velký a členitý objekt, docházelo při nahrání k mnoha komplikacím. Nejvýraznější komplikace byla s~texturami, které v některých formátech zcela chyběly či se zobrazily na jiných místech. Nejkvalitněji byl model zobrazen po importu ve formátu \textit{.kmz}, kde ačkoliv není i po několika úpravách vykreslena textura Rumpálu, je vizualizace modelu v CE nejuspokojivější. 
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=13cm]{pics/hrad_ce.jpg}
+	\caption{Strakonický hrad v prostředí CityEngine ve formátu KMZ}
+	\label{obrazek:hradCE}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=10cm]{pics/dae.png}
+	\caption{Strakonický hrad v prostředí CityEngine ve formátu DAE}
+	\label{obrazek:hraddae}
+\end{figure}
+
+
+U nahraných vektorizovaných vrstev bylo potřeba provést drobné úpravy, neboť při generování stromů byl na polygonu lesu vždy vytvořen pouze jeden strom. V programu ArcMap byly funkcí \textit{Create Random Points} vygenerovány náhodné body s minimálním rozestupem 5 m. 
+
+Pro následné modelování byly k jednotlivým vrstvám přiřazeny soubory s pravidly. Vygenerované objekty byly funkcí \textit{Allign shapes to terrain} umístěny na terén, čímž se zabránilo tomu, aby se objekty vznášely ve vzduchu. Vytvořené modely byly na závěr publikovány prostřednictvím ArcGIS Online.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=10cm]{pics/lesy_knezihora.png}
+	\caption{Vygenerovaný les - Kněží hora u Katovic}
+	\label{obrazek:knezihora}
+\end{figure}
+
 
 \section{Publikování výsledků na internetu}
+Vytvořené modely, mozaiky a vybrané vrstvy byly publikovány na server ArcGIS Online, odkud byla následně vytvořena webová mapová aplikace. Sdílení probíhalo funkcí \textit{Share as service}. Byla vytvořena 2D mapová aplikace a 3D mapová aplikace. 
+
+2D mapová aplikace obsahuje vrstvu s rastry povinných císařských otisků a SMO-5. Zároveň byla vytvořena bodová vrstva obsahujíící fotografie různých míst. Mapová aplikace byla doplněna o možnost volby podkladových map, sdílení, měření vzdálenosti a tisku mapy. 
+
+3D mapová aplikace obsahuje exportované modely z programu CityEngine, generalizovaný model Strakonického hradu a podkladovou vrstvu císařských povinných otisků. Aplikace je rozšířena o widgety s možností volby podkladové mapy, sdílení aplikace, měření vzdálenosti a tisku mapy.
+
+
+
+\section{Porovnání výškopisu}
+V rámci práce byl vytvořený model krajiny porovnáván s produktem od ČÚZK DMR 5G. DMR 5G byl získán z prohlížecí služby Esri ArcGIS Server \cite{dmr}, z níž byl pro danou oblast vyexportován ve formátu \textit{tiff}. Vyexportovaný soubor byl následně v programu ArcMap oříznut přesnou hranicí oblasti funkcí \textit{Extract by mask}. 
+
+Vytvořený rastr modelu krajiny a oříznutý rastr DMR 5G byly mezi sebou porovnány funkcí \textit{Raster Calculator}. Do funkce byl vložen rozdíl vytvořeného povrchu a staženého povrchu. Výsledný rastr znázorňoval rozdíl obou výšek. Rastr s rozdílem je součástí příloh. Na obrázku č.~\ref{obrazek:histogram} lze vidět histogram rozdílů. Maximální rozdíly byly 36 m, tato výrazná výchylka je zřejmě způsobena místy, kde nebyla k dispozici data. Z histogramu je patrné normální rozdělení a průměrný rozdíl 1 m. Lze tedy vytvořený model krajiny považovat za kvalitní. 
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=8cm]{pics/histogram.jpg}
+	\caption{Histogram rozdílu nadmořských výšek}
+	\label{obrazek:histogram}
+\end{figure}
+
+Oba modely byly také porovnávány vizuálně mezi sebou. Dle obrázku č.~\ref{obrazek:rozdilvysek} je patrné, že až na výjimky jsou modely téměř totožné. 
+
+\begin{figure}[htp]
+\centering
+\includegraphics[width=6cm]{pics/dm_smo5.png}
+\includegraphics[width=6cm]{pics/dmr_5g.png}
+\caption{Vlevo model krajiny vytvořený z dat SMO-5, vpravo DMR 5G}
+\label{obrazek:rozdilvysek}
+\end{figure}
 
 
 \chapter{Prezentace na webových stránkách}
-I přes znalost značkovacího jazyka HTML byla webová stránka vytvářena online přes stránku Wix. Stránka Wix nabízí možnost bezplatného webhostingu, případně placené verze, pokud uživatel nechce na svých webových stránkách zobrazit reklamy či chce využít jiných prémiových služeb. Velkou výhodou tohoto webu je interaktivní tvorba, při níž uživatel pomocí 
+I přes znalost značkovacího jazyka HTML byla webová stránka vytvářena online přes stránku Wix. Stránka Wix nabízí možnost bezplatného webhostingu, případně placené verze, pokud uživatel nechce na svých webových stránkách zobrazit reklamy či chce využít jiných prémiových služeb. Velkou výhodou tohoto webu je interaktivní tvorba, která umožňuje vytváření webových stránek i těmi, kteří se s programováním či skriptováním nikdy nesetkali. Mnoho uživatelů může i uvítat to, že editor je v češtině. 
 
-\section{Jazyk webových stránek}
+Wix nabízí před tvorbou několik šablon rozdělených dle účelu stránky či~tématu stránky. Šablony jsou k dispozici zdarma či prémiové za příplatek. Stránka nabízí vkládání celé řady objektů, od videí, obrázků, zvuků až po~databáze či ikony souvisejícími se sociálními sítěmi. 
 
-\section{Náležitosti webové stránka}
-(nebo spíše struktura?)
+
+
+
+\section{Objekty webových stránek}
+
+
+\section{Vzhled stránek}
+
 
 \section{Fotodokumentace}
 
 \chapter{Diskuze}
+V současné době je velký zájem o historii a její porovnání s aktuálním stavem. Tato skutečnost lze vidět i na vyhotovených pracích. Za zmínku jistě stojí diplomová práce od Adély Dykastové  \cite{dykastova}, která zpracovávala historické mapové podklady a modelovala objekty pro město Kadaň. V této práci byla zvolena rozsáhlejší oblast, a to oblast středního Pootaví, tedy od Horažďovic po Strakonice. Tato oblast má, stejně jako město Kadaň, bohatou historii. Zpracování podkladových dat probíhalo obdobným způsobem, rastry byly georeferencovány na podkladech katastrálních map, aby při následné vizualizaci ve webových mapových aplikacích nebyly výrazné rozdíly. Vzhledem k malé oblasti mohla Adéla Dykastová vektorizovat objekty více typů a porovnávat jejich vývoj v rámci různých časových období. V případě rozšíření této práce by tato možnost byla zajisté vítána. Mohl by být porovnán vývoj krajiny, jak se změnil podíl orné půdy, lesů a luk na úkor zástavby. Při takto vytvořených prvcích by bylo následně také možné vypočítat koeficient ekologické stability, jenž udává poměr stabilních a nestabilních ekosystémů. Pomocí tohoto koeficientu lze zhodnotit, zda je území hojně využívané a přírodní struktury jsou narušené, či se jedná o přírodní krajinu s nízkou intenzitou využití člověkem. 
+
+V práci byla zadaná oblast modelována z dat SMO-5, stejný způsob tvorby využila i Adina Slívová ve své diplomové práci \cite{adina}, v níž se zaměřila na oblast historického údolí Slap. Ve své práci narazila na několik problémů týkajících se špatně přiřazené nadmořské výšce vrstevnice či chybějícímu přesnému umístění výškové kóty. Rastry použité pro tuto práci naštěstí žádný obdobný problém neobsahovaly, přesto byla při vektorizaci zvýšená obezřetnost. V rámci této práce byly vyzkoušeny všechny způsoby tvorby vrstevnic, aby byl vybrán ten nejefektivnější, neboť bylo nutné zvektorizovat vrstevnice pro velké území. Nejvhodnější způsob byla poloautomatická tvorba vrstevnic. Při automatické tvorbě byly zvektorizovány i objekty, které s vrstevnicemi nemají nic společného a tyto objekty bylo nutné následně důkladně prozkoumat a odstranit. 
+
+Součástí výstupů této práce jsou i mapy měst, kterými Otava protéká.  O~výstupy této práce projevila zájem Šmidingerova knihovna ve Strakonicích, se kterou se momentálně jedná o možnosti vystavení map v prostorách vstupní haly knihovny na Strakonickém hradě. 
+
+Součástí práce byla tvorba generalizovaného 3D modelu Strakonického hradu. Jedná se o rozsáhlý a členitý komplex. Objekt bylo při tvorbě nutné generalizovat nejen z časových důvodů, ale také z paměťových nároků programu City Engine. Tento program má při nahrávání komplikovaných staveb problémy se zobrazením textur. Tento problém se nevyhl ani Strakonickému hradu, u nějž se přes několik oprav nepodařilo vykreslit texturu hradní věže Rumpál. Navíc bylo nutné odstranit textury z jižní strany hradu, které při publikování do softwaru CityEngine byly náhodně rozmístěny po celém objektu.
+
+Vytvoření konkrétního objektu dodá oblasti na autentičnosti. Dle mapových podkladů se v oblasti nachází více významných budov, ať už se jedná o~kostely či o~zámek Střelu. Součástí práce by do budoucna mohlo být rozšíření o vytvořené 3D modely těchto významných staveb. 
+
+Při publikování dat ze softwaru CityEngine docházelo k problému s umístěním objektů. Přestože objekty v programu CityEngine měly totožné půdorysy s podkladovou  mapou, po publikování jsou objekty zhruba o 10 m posunuté. Na vině bude zřejmě vnitřní transformace, neboť surová data jsou ve formátu S-JTSK Krovak East North a ArcGIS Online data zobrazuje v systému WGS~84. Tento problém byl konzultován s vedoucím práce, ale bohužel se jej nepodařilo odstranit. 
+
+Neopomenutelnou součástí práce byl také sběr historických fotografií a jejich porovnání s aktuálním stavem. Velké množství fotografií znázorňuje Strakonice, za uvážení by jistě stálo důkladnější prozkoumání archivů zbylých měst a rozšíření fotodokumentace o tyto fotografie. 
+
+Přestože tvorbu práce doprovázely různé komplikace, podařilo se splnit cíl práce a prezentovat výstupy prostřednictvím webové stránky. Webová stránka je na pohled čistá a přehledná, jako velké plus vidím možnost porovnání dobových fotografií s aktuálním stavem, navíc mnoho z použitých fotografií není veřejně dostupných. 
+
+Velký důraz při práci byl kladen na samostatnost. Veškeré historické podklady od stavebních plánů hradu po sběr historických fotografií byl získán autorkou. Zároveň bylo pro potřebu fotodokumentace nutné získat aktuální snímky, které si autorka taktéž sama obstarala. Získání aktuálních fotografií výrazně ztěžovaly restaurátorské práce, při nichž byly po určitou dobu části hradu zakryty lešením. 
+
+Práce se sama o sobě zabývá velmi širokým tématem a zahrnuje velké území. Práci lze považovat za kvalitní zdroj při zpracování v prostředí ArcMap, neboť softwaru ArcMap je věnována velká část díla. Detailněji jsou popsány transformace, které se používají v ArcMapu při georeferencování. Velkým přínosem je také snaha o propojení několika různých softwarů a objektů z nich vypublikovaných.
 
 
 
 \begin{conclusion}
-Závěr
+Hlavním cílem práce byla vizualizace území v údolí řeky Otavy v okolí Strakonic, doplnění o vytvořený objekt Strakonického hradu a sběr historických fotografií. Všechny výstupy byly následně prezentovány na vytvořených webových stránkách.
+
+Stěžejní část práce spočívala v georeferencování císařských povinných otisků stabilního katastru. Vzhledem k velikosti oblasti bylo nutné zgeoreferencovat celkem 59 rastrů. Je zde nutné podotknout, že se jedná o počet rastrů, nikoliv katastrálních území. Zgeoreferencované rastry byly následně ořezány a ukládány do vytvořené geodatabáze. Georeferencování bylo náročné, neboť bylo nutné kontrolovat nejen střední chybu, ale také návaznost jednotlivých listů, zejména návaznost vodního toku. Po zpracování císařských povinných otisků stabilního katastru byly stejným způsobem zgeoreferencovány rastry SMO-5. 
+
+Z podkladů císařských povinných otisků byly zvektorizovány vodní toky, budovy a lesy. Tato vrstva následně posloužila pro generování objektů v softwaru CityEngine, kde byla aplikována pravidla procedurálního modelování. Z~rastrů SMO-5 byly zvektorizovány vrstevnice a výškové kóty, které byly dále využity pro modelování krajiny. Vytvořená krajina byla porovnána s existujícím modelem krajiny DMR 5G. 
+
+Pro autentičnost byl vytvořen 3D model Strakonického hradu v programu SketchUp, který doplnil vytvořené modely krajiny. Model byl vytvářen generalizovaný a velké množství dílčích částí bylo vkládáno ve formě textur.
+
+Výsledky ze softwaru CityEngine, ArcMap a ArcGIS Pro byly publikovány na server ArcGIS Online, kde byly pro interaktivní prohlížení vytvořeny webové mapové aplikace. Zároveň byla pro prezentování výsledků vytvořena webová stránka obsahující nejen výstupy, ale také stručnou historii měst a~vytvořenou srovnávací fotodokumentaci.
+
+
+
+
+
 \end{conclusion}
 
 \bibliographystyle{csn690}
@@ -929,9 +1050,11 @@ Závěr
 % seřadit podle abecedy
 % \printglossaries
 \begin{description}
+	\item[Bpv] Balt po vyrovnání
 	\item[ČMeS] Česká meteorologická společnost
 	\item[ČÚZK] Český ústav zeměměřický a katastrální
 	\item[DIBAVOD] Digitální báze vodohospodářských dat
+	\item[DMR 5G] Digitální model reliéfu 5. generace
 	\item[EPSG] European Petroleum Survey Group – databáze obsahující kódy zemských elipsoidů, geodetických dat, zeměpisných a kartografických souřadnicových systémů, měrných jednotek apod., každý souřadnicový systém má unikátní kód
 	\item[ESRI] Environmental Systems Research Institute - jeden z největších světových producentů software GIS
 	\item[GIS] Geografický informační systém
