--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -158,6 +158,15 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   address = "Praha",
 }
 
+@misc{plavcova,
+  url = "https://dspace.cvut.cz/handle/10467/77342",
+  howpublished = "[online]",
+  title = "Soubor tématických map města Benešova a jeho okolí",
+  note = "[cit. 11.5.2019]",
+  author = "Tereza Plavcová",
+  address = "Praha",
+}
+
 @misc{zichovice,
   url = "http://www.zichovice.cz/historie-obce/",
   howpublished = "[online]",
@@ -347,6 +356,28 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
 @misc{malimankova,
   title = "Tvorba datového modelu Crigingerovy mapy v ArcGIS",
   url = "http://maps.fsv.cvut.cz/diplomky/2008_BP_Malimankova_Tvorba_datoveho_modelu_Crigingerovy_mapy_v_ArcGIS.pdf",
+  howpublished = "[online]",
+  note = "[cit. 14.5.2019]",
+}
+
+@misc{dmr,
+  title = "Prohlížecí služba ESRI ArcGIS Server - Analýza výškopisu",
+  url = "https://ags.cuzk.cz/dmr/",
+  howpublished = "[online]",
+  note = "[cit. 14.5.2019]",
+}
+
+@misc{jaderka,
+  title = "Procedurální modelování",
+  author = "Pavel Strachota",
+  url = "http://saint-paul.fjfi.cvut.cz/base/sites/default/files/POGR/POGR2/06.proceduralni_modelovani.pdf",
+  howpublished = "[online]",
+  note = "[cit. 20.5.2019]",
+}
+
+@misc{arcdata,
+  title = "ARCDATA PRAHA: Desktopový GIS - Produkty",
+  url = "https://www.arcdata.cz/produkty/arcgis/desktopovy-gis",
   howpublished = "[online]",
   note = "[cit. 14.5.2019]",
 }
